# advent_of_code

./: .gitignore  Cargo.toml  README.md  flake.nix  shell.nix
2015/01/: Cargo.toml
2015/02/: Cargo.toml
2015/03/: Cargo.toml
2015/04/: Cargo.toml
2015/05/: Cargo.toml
2015/06/: Cargo.toml
2015/07/: Cargo.toml
2015/08/: Cargo.toml
2021/03/: Cargo.toml
2021/04/: Cargo.toml
2021/06/: Cargo.toml
2021/07/: Cargo.toml
2021/09/: Cargo.toml
2021/11/: Cargo.toml
2021/14/: Cargo.toml
2021/15/: Cargo.toml
2022/03/: Cargo.toml
2022/04/: Cargo.toml
2022/05/: Cargo.toml
2022/06/: Cargo.toml
2023/06/: Cargo.toml
2023/11/: Cargo.toml
a01/: Cargo.toml
a01/src/: main.rs
day01/a2/: Cargo.toml
day02/part1/: Cargo.toml
day02/part2/: Cargo.toml
day05/part1/: Cargo.toml
day05/part2/: Cargo.toml
day06/part1/: Cargo.toml
day06/part2/: Cargo.toml
input/: day10_test2.txt
old/: Cargo.toml
old/input/y2015/: day07_test.txt
old/input/y2023/: day01-demo.txt
old/src/: years.rs
old/src/years/y2015/: day01.rs  day02.rs  day03.rs  day06.rs  day07.rs
old/src/years/y2015/day06/: part2.rs
old/src/years/y2021/: day1.rs  day10.rs  day11.rs  day13.rs  day14.rs  day15.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
old/src/years/y2022/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs
old/src/years/y2023/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs
src/: days.rs  main.rs  years.rs
src/days/: day1.rs  day10.rs  day11.rs  day13.rs  day14.rs  day15.rs  day2.rs  day3.rs  day4.rs  day5.rs  (+4 more)
(+97 files in other folders)
