[workspace]
members = ["2015/01", "2015/02", "2015/03", "2015/05", "2015/04", "2015/06", "2015/07", "2021/01", "2021/02", "2021/03", "2021/04", "2021/05", "2021/06", "2021/07", "2021/08", "2021/09", "2021/10", "2021/11", "2021/13", "2021/14", "2021/15", "2022/01", "2022/02", "2022/03", "2022/04", "2022/05", "2022/06", "2023/01", "2023/02", "2023/03", "2023/04", "2023/06"]
resolver = "2"
