[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adventofcode_lmh01_lib = { git = "https://github.com/LMH01/adventofcode_lmh01_lib.git" }
clap = "3.0.0-beta.5"
#adventofcode_lmh01_lib = { path = "../../adventofcode_lmh01_lib" }
miette = {version = "3.2.0", features = ["fancy"] }
md5 = "0.7.0"
simple_graph_algorithms = {version = "1.0.0"}
